--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Mở app</title>
-  <script>
-    setTimeout(function () {
-      window.location.href = "https://play.google.com/store/apps/details?id=com.your.app"; // fallback nếu app chưa cài
-    }, 2000);
 
-    window.location = "myapp://open?id=123"; // deep link gọi app
-  </script>
+<head>
+    <meta charset="UTF-8">
+    <title>History of VietNam</title>
+    <link rel="icon" href="logo_app.png" type="image/png">
+
+    <script>
+        const urlParams = new URLSearchParams(window.location.search);
+        const dynamicId = urlParams.get('quizId');
+
+        setTimeout(function () {
+            document.body.innerHTML = "<h2 style='text-align:center;margin-top:50px;'>Bạn chưa cài ứng dụng</h2>";
+        }, 2000);
+
+        window.location = "history://vietnam?quizId=" + dynamicId;
+    </script>
+
 </head>
+
 <body>
-  <p>Đang mở ứng dụng...</p>
+    <p>Đang mở ứng dụng...</p>
 </body>
+
 </html>
