--- a/index.html
+++ b/index.html
@@ -8,14 +8,29 @@
 
     <script>
         const urlParams = new URLSearchParams(window.location.search);
-        const dynamicId = urlParams.get('quizId');
+        const dynamicId = urlParams.get('quizId') || '0';  // mặc định id=0 nếu không có
 
-        setTimeout(function () {
-            document.body.innerHTML = "<h2 style='text-align:center;margin-top:50px;'>Bạn chưa cài ứng dụng</h2>";
-        }, 2000);
+        function openApp() {
+            window.location = "history://vietnam?quizId=" + dynamicId;
+        }
 
-        window.location = "history://vietnam?quizId=" + dynamicId;
+        // Thêm nút để người dùng bấm mở app, tránh trình duyệt chặn tự động redirect
+        document.body.innerHTML = `
+                <p>Đang mở ứng dụng...</p>
+                <button id="openAppBtn">Mở ứng dụng</button>
+                <p id="status"></p>
+            `;
+
+        document.getElementById('openAppBtn').addEventListener('click', () => {
+            openApp();
+
+            // Sau 3 giây không mở được app thì hiển thị thông báo
+            setTimeout(() => {
+                document.getElementById('status').innerText = "Bạn chưa cài ứng dụng hoặc không mở được.";
+            }, 3000);
+        });
     </script>
+
 
 </head>
 
