--- a/index.html
+++ b/index.html
@@ -7,19 +7,38 @@
     <link rel="icon" href="logo_app.png" type="image/png" />
 </head>
 
-<body>
-    <p>Đang mở ứng dụng...</p>
+<body
+    style="margin:0; font-family: Arial, sans-serif; background: #f0f0f0; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center;">
+
+    <h1 style="margin-bottom: 20px; color: #333;">History of VietNam</h1>
+
+    <div style="position: relative; width: 180px; height: 180px; margin-bottom: 30px;">
+        <img src="logo_app.png" alt="App Logo"
+            style="width: 100%; height: 100%; object-fit: contain; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);" />
+        <!-- Nếu muốn tên app trên ảnh, có thể dùng div overlay -->
+        <div
+            style="position: absolute; top: 8px; left: 0; right: 0; text-align: center; font-weight: bold; color: white; text-shadow: 0 0 5px rgba(0,0,0,0.7); font-size: 18px;">
+            History of VietNam
+        </div>
+    </div>
+
+    <button id="openAppBtn" style="
+      padding: 12px 25px;
+      background-color: #007BFF;
+      border: none;
+      border-radius: 6px;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+      box-shadow: 0 2px 6px rgba(0,123,255,0.5);
+      transition: background-color 0.3s ease;
+    ">Mở ứng dụng</button>
+
+    <p id="status" style="margin-top: 20px; color: #d9534f; font-weight: 600;"></p>
 
     <script>
         const urlParams = new URLSearchParams(window.location.search);
         const dynamicId = urlParams.get('quizId') || '0';  // mặc định 0 nếu không có
-
-        // Tạo nội dung mới: message + nút bấm + status
-        document.body.innerHTML = `
-            <p>Đang mở ứng dụng...</p>
-            <button id="openAppBtn">Mở ứng dụng</button>
-            <p id="status"></p>
-        `;
 
         function openApp() {
             window.location = "history://vietnam?quizId=" + dynamicId;
@@ -27,12 +46,12 @@
 
         document.getElementById('openAppBtn').addEventListener('click', () => {
             openApp();
-
-            setTimeout(() => {
-                document.getElementById('status').innerText = "Bạn chưa cài ứng dụng hoặc không mở được.";
-            }, 3000);
         });
+
+        openApp();
     </script>
+
 </body>
+
 
 </html>
